# rust.amsterdam

./: .env.sample  .gitignore  CNAME  Cargo.toml  Makefile  index.html  inviteify.toml  rust-toolchain.toml  styles.css
.github/workflows/: gh-pages.yml
inviteify/: .env.sample  Cargo.toml  README.md  inviteify.toml.sample
inviteify/src/: error.rs  http.rs  lib.rs
src/: main.rs
static/: index.html  styles.css
