[package]
name = "rust-amsterdam"
description = "The Rust Amsterdam Meetup group website"
version = "0.1.0"
readme = "README.md"
keywords = ["amsterdam"]
categories = ["web-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = [
  "inviteify"
]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://rust.amsterdam"
repository = "https://www.github.com/b-n/rust.amsterdam"

[dependencies]
inviteify = { version = "0.1.0", path = "inviteify/", features = ["qrcode"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.7", features = ["derive", "env", "string"] }
qrcode = { version = "0.12.0" }
