[package]
name = "inviteify"
description = "Small discord api library to manage invite codes"
version = "0.1.0"
keywords = ["discord"]
categories = ["web-programming"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
