[package]
name = "inviteify"
description = "Small discord api library to manage invite codes"
version = "0.1.0"
keywords = ["discord"]
categories = ["web-programming"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
time = { version = "0.3.30", features = ["parsing", "std", "serde"] }
